# universal_robots_cv

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/ros2_monocular_depth/share/ros2_monocular_depth/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/universal_robots_cv/share/universal_robots_cv/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/universal_robots_cv/: CMakeList.txt  package.xml  setup.cfg  setup.py
src/universal_robots_cv/config/: coco_labels.yaml
src/universal_robots_cv/universal_robots_cv/: 3d_mapping_node.py  aruco_node.py  motion_planning_moveit.py  motion_planning_node  movement_execution_node.py  movement_planning.py  movement_planning_node.py  object_filtering-node.py  object_recognition_node.py  point_cloud_node.py  tracked_image_node.py
