<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>universal_robots_cv</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="k.yavuzkurt1@gmail.com">kayeka</maintainer>
  <license>MIT</license>


  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>torchvision</depend>
  <depend>torch</depend>
  <depend>object_detection_msgs</depend>
  <depend>cv2</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
